Change the core and spurious axis discovery procedure

--- a/celeba.ipynb
+++ b/celeba.ipynb
@@ -5871,10 +5871,16 @@
         "def normalize(x):\n",
         "    return x / np.linalg.norm(x)\n",
         "\n",
-        "sp_ax1 = normalize(grouped_prototypes['man_blond'] + grouped_prototypes['man_black'])\n",
-        "sp_ax2 = normalize(grouped_prototypes['woman_blond'] + grouped_prototypes['woman_black'])\n",
-        "core_ax1 = normalize(grouped_prototypes['man_blond'] + grouped_prototypes['woman_blond'])\n",
-        "core_ax2 = normalize(grouped_prototypes['man_black'] + grouped_prototypes['woman_black'])\n",
+        "sp_ax1 = normalize(grouped_prototypes['woman_blond'] - grouped_prototypes['man_blond'])\n",
+        "sp_ax2 = normalize(grouped_prototypes['woman_black'] - grouped_prototypes['man_black'])\n",
+        "core_ax1 = normalize(grouped_prototypes['man_blond'] - grouped_prototypes['man_black'])\n",
+        "core_ax2 = normalize(grouped_prototypes['woman_blond'] - grouped_prototypes['woman_black'])\n",
+        "\n",
+        "\n",
+        "# sp_ax1 = normalize(grouped_prototypes['man_blond'] + grouped_prototypes['man_black'])\n",
+        "# sp_ax2 = normalize(grouped_prototypes['woman_blond'] + grouped_prototypes['woman_black'])\n",
+        "# core_ax1 = normalize(grouped_prototypes['man_blond'] + grouped_prototypes['woman_blond'])\n",
+        "# core_ax2 = normalize(grouped_prototypes['man_black'] + grouped_prototypes['woman_black'])\n",
         "\n",
         "\n",
         "# sp_ax = (sp_ax1 + sp_ax2).squeeze() / 2\n",
